--- a/dependencies-all.gradle
+++ b/dependencies-all.gradle
@@ -16,14 +16,8 @@ ext.deps = [
         'support'      : [
                 'core_ktx' : "androidx.core:core-ktx:$versions.kotlin",
                 'appcompat': "androidx.appcompat:appcompat:$versions.appcompat",
-                'fragment' : "androidx.fragment:fragment-ktx:$versions.fragment",
                 'activity' : "androidx.activity:activity-ktx:$versions.activity",
-        ],
-        'navigation'   : [
-                'navigationFragment': "androidx.navigation:navigation-fragment-ktx:$versions.nav_version",
-                'navigationUi'      : "androidx.navigation:navigation-ui-ktx:$versions.nav_version",
-                'dynamic'           : "androidx.navigation:navigation-dynamic-features-fragment:$versions.nav_version",
-                'testing'           : "androidx.navigation:navigation-testing:$versions.nav_version",
+                'splash'   : "androidx.core:core-splashscreen:1.0.1",
         ],
         'koin'         : [
                 'core'     : "io.insert-koin:koin-core:$versions.koin",
@@ -62,6 +56,10 @@ ext.deps = [
                 'previewDebug'    : "androidx.compose.ui:ui-tooling",
                 'testUi'          : "androidx.compose.ui:ui-test-junit4",
                 'testDebug'       : "androidx.compose.ui:ui-test-manifest",
+        ],
+        'paging'       : [
+                'runtime': "androidx.paging:paging-runtime:3.1.1",
+                'compose': "androidx.paging:paging-compose:1.0.0-alpha19",
         ],
         'glide'        : [
                 'glide'   : 'com.github.bumptech.glide:glide:4.12.0',
