--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SCTMT"
+        android:theme="@style/Theme.MCKC"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
@@ -19,7 +19,7 @@
             android:exported="true"
             android:label="@string/title_activity_authentication"
             android:screenOrientation="userPortrait"
-            android:theme="@style/Theme.SCTMT"
+            android:theme="@style/Theme.MCKC"
             tools:ignore="LockedOrientationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
