--- a/dependencies-versions.gradle
+++ b/dependencies-versions.gradle
@@ -1,31 +1,34 @@
 ext.versions = [
 
-    ////////////////////////////////////////////////////////////////////////////////////////////
-    // MAIN                                                                                   //
-    ////////////////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////////////////
+        // MAIN                                                                                   //
+        ////////////////////////////////////////////////////////////////////////////////////////////
 
-    'compileSdk': 33,
-    'buildTools': '30.0.3',
-    'targetSdk': 33,
-    'minSdk': 23,
+        'compileSdk': 33,
+        'buildTools': '30.0.3',
+        'targetSdk': 33,
+        'minSdk': 26,
 
-    'gradle': '8.0.0',
-    'kotlin': '1.8.21',
-    'retrofit': '2.9.0',
-    'room': '2.5.0',
-    'nav_version': '2.5.3',
-    'okHttp': '4.8.0',
-    'parceler': '1.1.12',
+        'gradle': '8.0.0',
+        'kotlin': '1.8.21',
+        'compose_bom': '2023.04.01',
+        'compose_compiler': '1.4.7',
+        'retrofit': '2.9.0',
+        'room': '2.5.0',
+        'nav_version': '2.5.3',
+        'okHttp': '4.8.0',
+        'parceler': '1.1.12',
 
-    'koin': '3.2.2',
-    'coroutines': '1.6.4',
-    'activity': '1.6.1',
-    'appcompat': '1.6.1',
-    'fragment': '1.5.7',
+        'koin': '3.2.2',
+        'coroutines': '1.6.4',
+        'activity': '1.6.1',
+        'appcompat': '1.6.1',
+        'fragment': '1.5.7',
+        'media3': '1.0.2',
 
-    ////////////////////////////////////////////////////////////////////////////////////////////
-    // TESTING                                                                                //
-    ////////////////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////////////////
+        // TESTING                                                                                //
+        ////////////////////////////////////////////////////////////////////////////////////////////
 
-    'mockito': '2.22.0'
+        'mockito': '2.22.0'
 ]
