--- a/di/build.gradle
+++ b/di/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'org.jetbrains.kotlin.android'
 apply from: '../config-android.gradle'
 apply from: '../config-properties.gradle'
+apply from: '../dependencies-groups.gradle'
 
 android {
     namespace 'gov.sa.scisp.di'
