--- a/settings.gradle
+++ b/settings.gradle
@@ -1,10 +1,11 @@
 dependencyResolutionManagement {
-    repositoriesMode.set(RepositoriesMode.PREFER_SETTINGS)//PREFER_SETTINGS//FAIL_ON_PROJECT_REPOS
+    repositoriesMode.set(RepositoriesMode.PREFER_SETTINGS)
     repositories {
         google()
         mavenCentral()
-        jcenter() // Warning: this repository is going to shut down soon
+        mavenLocal()
         maven { url 'https://jitpack.io' }
+        maven { url 'https://maven.testfairy.com' }
     }
 }
 
